--- a/index.html
+++ b/index.html
@@ -5,17 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>KAKAO API - BOOK</title>
+
 </head>
 <body>
     <h1>책 제목을 검색해주세요</h1>
     <input id='bookName' value='상실의 시대' type='text'>
     <button id='search'>검색</button>
-
+    <button id='api'>호출</button>
     <p></p>
 
-    <div id="result">
+    <div id="result"></div>
 
-    </div>
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src='index.js'></script>
 </body>
